apps/staging/bazarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
spec:
  ingressClassName: traefik
  rules:
    # to be accessed from LAN/VPN only
    - host: bazarr.milanoid.net # subdomain of my cloudflare domain
      http:
        paths:
          - backend:
              service:
                name: bazarr
                port:
                  number: 6767
            path: /
            pathType: Prefix
